--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Webpage.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="nav_container">
@@ -43,4 +43,5 @@
         </div>
     </div>
   </body>
+
 </html>
